# RTNeural

RTNeural/: CMakeLists.txt  Model.h  ModelT.h  model_loader.h
RTNeural/activation/: activation.h
RTNeural/dense/: dense.h
RTNeural/lstm/: lstm.h
